--- a/app/views/devise_mailer/confirmation_instructions.html.erb
+++ b/app/views/devise_mailer/confirmation_instructions.html.erb
@@ -10,7 +10,7 @@
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
 
-<p>Please <a href="mailto:richard.stirling@theodi.org">drop me a line</a> if there is anything that we can do to make your life as a member easier</p>
+<p>Please <a href="mailto:<%= DEFAULT_SEND_EMAIL %>">drop me a line</a> if there is anything that we can do to make your life as a member easier</p>
 
 <p>Welcome again to the ODI community!</p>
 
@@ -18,4 +18,4 @@
 
 <img src="http://directory.theodi.org/assets/signature.png" alt="" />
 
-<p>Richard</p>
+<p>t(:email_signoff)</p>
