Fix email links

--- a/app/views/devise_mailer/confirmation_instructions.html.erb
+++ b/app/views/devise_mailer/confirmation_instructions.html.erb
@@ -25,9 +25,9 @@
 </p>
 
 <p>
-  <%= mail_to 'Stuart Coleman', 'stuart.coleman@theodi.org' %> Commercial Director<br/>
-  <%= mail_to 'Georgia Phillips', 'georgia.phillips@theodi.org' %> For Partner / Sponsor queries<br/>
-  <%= mail_to 'Carl Rodrigues', 'carl.rodrigues@theodi.org' %> For new Supporter queries<br/>
-  <%= mail_to 'Andrea Cox', 'andrea.cox@theodi.org' %> For membership community, events and newsletter<br/>
-  <%= mail_to 'Membership', 'members@theodi.org' %> For general queries<br/>
+  <%= mail_to 'stuart.coleman@theodi.org', 'Stuart Coleman' %> Commercial Director<br/>
+  <%= mail_to 'georgia.phillips@theodi.org', 'Georgia Phillips' %> For Partner / Sponsor queries<br/>
+  <%= mail_to 'carl.rodrigues@theodi.org', 'Carl Rodrigues' %> For new Supporter queries<br/>
+  <%= mail_to 'andrea.cox@theodi.org', 'Andrea Cox' %> For membership community, events and newsletter<br/>
+  <%= mail_to 'members@theodi.org', 'Membership' %> For general queries<br/>
 </p>
