--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -106,6 +106,37 @@
 
 #terms {
   
+  /* Copy of bootstrap .table & .table-striped styles. Would love a better way to do this. */
+  table {
+    tbody tr:nth-child(odd) > td,
+    tbody tr:nth-child(odd) > th {
+      background-color: #f9f9f9;
+    }
+
+    width: 90%;
+    margin-bottom: 20px;
+    margin-left: 50px;
+    border: 1px solid #dddddd;
+
+    th,
+    td {
+      padding: 8px;
+      line-height: 20px;
+      text-align: left;
+      vertical-align: top;
+      border-top: 1px solid #dddddd;
+    }
+
+    th {
+      font-weight: bold;
+    }
+
+    thead th {
+      vertical-align: bottom;
+    }
+  
+  }
+
   ol {
     counter-reset: section;
     list-style-type: none;
