--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 				<div class='container'>
 					<div class='navbar-inner'>
 						<a class='brand' href='http://theodi.org/'>
-							<img alt="Logo" src="http://assets.theodi.org/img/logo-footer.png" />
+              <%= image_tag "logo-header.png", alt: "Logo" %>
 						</a>
 							<ul class="nav pull-right">
 							    <li><a href="http://theodi.org/contact">Contact us</a></li>
@@ -34,7 +34,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 
     <div class="navbar navbar-static-top" id="mainnav">
 				<div class="container">
@@ -112,7 +112,7 @@
 		</header>
 
 		<div class='container main-default' id='main'>
-			
+
 			<% if notice %><div class="alert alert-info"><%= notice %></div><% end %>
 	    <% if alert %><div class="alert alert-error"><%= alert %></div><% end %>
 
