--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,27 @@
 <head>
   <title>ODI Member Directory</title>
   <%= alternate_auto_discovery_link_tags %>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
 </head>
 
 <body>
 
   <div id='wrapper'>
 
-    <div class="whiteout">
-      <section>
-        <header>
-            <div class="container">
-              <h1><%= @title || "Members"%></h1>
-            </div>
-        </header>
-
-        <div class='container main-default' id='main'>
-
-          <% if notice %><div class="alert alert-info"><%= notice %></div><% end %>
-          <% if alert %><div class="alert alert-error"><%= alert %></div><% end %>
-
-         <%= yield %>
+    <header class='page-title'>
+        <div class="container">
+          <h1><%= @title || "Members"%></h1>
         </div>
-      </section>
+    </header>
+
+    <div class='container main-default' id='main'>
+
+      <% if notice %><div class="alert alert-info"><%= notice %></div><% end %>
+      <% if alert %><div class="alert alert-error"><%= alert %></div><% end %>
+
+     <%= yield %>
     </div>
 
   </div>
