Add required flags to selects

--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -32,6 +32,7 @@
           "Less than 250 employees" => "small",
           "250 or more employees"   => "large"
         }) %>
+      <span class="help-inline">(required)</span>
     </div>
   </div>
 
@@ -43,6 +44,7 @@
           "Commercial"       => "commercial",
           "Non-commercial"   => "non_commercial"
         }) %>
+      <span class="help-inline">(required)</span>
     </div>
   </div>
 
