Change organisation type labels

--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -40,9 +40,9 @@
     <%= f.label :organization_type, :class => 'control-label'  %>
     <div class="controls">
       <%= f.select(:organization_type, {
-          "Please select"           => nil,
-          "Commercial"       => "commercial",
-          "Non-commercial"   => "non_commercial"
+          "Please select"            => nil,
+          "Corporate"                => "commercial",
+          "Nonprofit / Government"   => "non_commercial"
         }) %>
       <span class="help-inline">(required)</span>
     </div>
