--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -1,8 +1,8 @@
 <div class='row-fluid'>
-  
+
   <div class='span6'>
     <%= form_field f, :name do %>
-      <%= f.text_field :name, :class => 'input', :required => 'required', 
+      <%= f.text_field :name, :class => 'input', :required => 'required',
                        :'data-bind' => "value: name, valueUpdate: 'afterkeydown'" %>
     <% end %>
 
@@ -17,11 +17,11 @@
     <% end %>
 
     <%= form_field f, :description do %>
-    	<%= f.text_area :description, 
-                      :class => 'input', 
-                      :rows => '8', 
-                      :maxlength => @member.organization.character_limit, 
-                      :required => 'required', 
+    	<%= f.text_area :description,
+                      :class => 'input',
+                      :rows => '8',
+                      :maxlength => @member.organization.character_limit,
+                      :required => 'required',
                       :'data-bind' => "value: description, valueUpdate: 'afterkeydown'" %>
     	<span class="help-block"><small>Plain text only, but you can use paragraphs</small></span>
     	<span class="help-block" id="limit"><%= "Limit of #{@member.organization.character_limit} characters" %></span>
@@ -35,22 +35,24 @@
     			var rem = max - len
     			$('#remaining').html(rem);
     		});
+        org_name = $('#member_organization_attributes_name')
+        org_name.val($('<div/>').html(org_name.val()).text())
     	});
     	</script>
     <% end %>
-  
+
     <% unless @member.product_name == "supporter" %>
 
       <%= form_field f, :logo do %>
-    		<%= f.file_field :logo, :accept => "image/*", 
+    		<%= f.file_field :logo, :accept => "image/*",
                          :'data-bind' => "event: {change: updateImage}" %>
     		<%= f.hidden_field :logo_cache %>
       <% end %>
-	
+
     <% end %>
 
   </div>
-  
+
   <div class='span6'>
 
     <%= form_field f, :cached_contact_name do %>
@@ -69,7 +71,7 @@
                        :pattern => "[a-zA-Z0-9._%+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z.]+",
                        :title => "Please enter a valid email address" %>
     <% end %>
-	
+
     <%= form_field f, :cached_twitter do %>
       <%= f.text_field :cached_twitter, :class => 'input-large', :placeholder => '@username',
                        :'data-bind' => "value: twitter, valueUpdate: 'afterkeydown'" %>
@@ -85,5 +87,5 @@
                       :'data-bind' => "value: linkedin, valueUpdate: 'afterkeydown'" %>
     <% end %>
   </div>
-  
+
 </div>
