Select country from list instead of free text

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -53,11 +53,13 @@
       }
     }
     function update_address() {
+      var index = $('#member_address_country')[0].selectedIndex;
+      var country = $('#member_address_country')[0].options[index].text;
       arr = [
         $('#member_street_address')[0].value,
         $('#member_address_locality')[0].value,
         $('#member_address_region')[0].value,
-        $('#member_address_country')[0].value,
+        country,
         $('#member_postal_code')[0].value
       ];
       str = arr.filter(function(e){return e}).join(", ");
