--- a/app/views/devise/registrations/_member_details.html.erb
+++ b/app/views/devise/registrations/_member_details.html.erb
@@ -87,7 +87,7 @@
   <div class="control-group">
   	<%= f.label :address_country, :class => 'control-label', :required => 'required' %>
   	<div class="controls">
-  		<%= f.text_field :address_country %>
+  		<%= f.country_select :address_country, priority_countries: ["GB"], prompt: true %>
 		<span class="help-inline">(required)</span>
   	</div>
   </div>
