--- a/app/views/members/_badge.html.erb
+++ b/app/views/members/_badge.html.erb
@@ -1,5 +1,5 @@
 <!-- BEGIN ODI MEMBER BADGE -->
-<div class="odi-member <%= @size %> <%= @align %>">
+<div class="odi-member <%= @size || "standard" %> <%= @align %>">
   <%= stylesheet_link_tag "badge.css" %>
   <%= link_to image_tag("badge/#{@member.product_name}/#{@size || "standard"}-badge.png", alt: "Open Data Institute #{@member.product_name.titleize}"), member_url(@member) %>
   <ul class="details">
