--- a/app/views/members/_badge.html.erb
+++ b/app/views/members/_badge.html.erb
@@ -3,7 +3,7 @@
   <%= stylesheet_link_tag "badge.css" %>
   <%= link_to image_tag("badge/#{@member.product_name}/#{@size || "standard"}-badge.png", alt: "Open Data Institute #{@member.product_name.titleize}"), member_url(@member) %>
   <ul class="details">
-    <li>Open Data Institute Partner</li>
+    <li>Open Data Institute <%= @member.product_name.titleize %></li>
     <li>Active since <%= @member.created_at.to_date %></li>
     <li>London, UK</li>
   </ul>
