--- a/app/views/members/_badge.html.erb
+++ b/app/views/members/_badge.html.erb
@@ -1,11 +1,12 @@
 <!-- BEGIN ODI MEMBER BADGE -->
-<div class="odi-member <%= @size || "standard" %> <%= @align %>">
+<div class="odi-badge odi-<%= @member.product_name %> <%= @size || "standard" %> <%= @align %>">
   <%= stylesheet_link_tag "badge.css" %>
-  <%= link_to image_tag("badge/#{@member.product_name}/#{@size || "standard"}-badge.png", alt: "Open Data Institute #{@member.product_name.titleize}"), member_url(@member) %>
-  <ul class="details">
-    <li>Open Data Institute <%= @member.product_name.titleize %></li>
-    <li>Active since <%= @member.created_at.to_date %></li>
-    <li>London, UK</li>
-  </ul>
+  <a href="<%= member_url(@member) %>">
+    <ul class="details">
+      <li>Open Data Institute <%= @member.product_name.titleize %></li>
+      <li>Active since <%= @member.created_at.to_date %></li>
+      <li>London, UK</li>
+    </ul>
+  </a>
 </div>
 <!-- END ODI MEMBER BADGE -->
